# TetrisSFML

./: CMakeLists.txt  README.md  main.cpp  mainLinux.cpp  make.sh  makeWin.txt
images/: background.pdn  frame.pdn
